# foobar

./: CMakeInclude.txt  CMakeLists.txt
foobar-bin/: CMakeLists.txt
foobar-bin/config/: foobar.hpp.in
foobar-bin/src/: main.cpp
foobar-lib/: CMakeLists.txt
foobar-lib/config/: foobar_lib.pc.in
